# pdf-extraction

./: README.md  app.py  config.py  editable_mask.py  export.py  extract_answer_keys.py  gui.py  inspect_pdf.py  option_label_ocr.py  pyproject.toml  question_bbox.py  requirements.txt  storage.py  validate_results.py  vector_bbox.py
docs/: README.md
exam_dataset/: annotation_loader.py  answer_key_loader.py  cli.py  config.py  dataset_builder.py  edits.py  models.py  ocr_mistral.py  option_parser.py  pack.py  pdf_render.py  points.py  report.py  review_server.py
exam_dataset/review_static/: style.css
exam_dataset/review_templates/: download.html  index.html  layout.html  record.html
ocr_engines/: tesseract_engine.py
scripts/: remove_overlapping_option_images.py
